--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #b73239;
-    --secondary-color: grey;
-    --tertiary-color: white;
-    --quaternary-color: black;
+    --primary-color: #151D3B;
+    --secondary-color: #D82148;
+    --tertiary-color: #6EBF8B;
+    --quaternary-color: #dadbbd;
 }
 
 * {
@@ -12,7 +12,7 @@
 }
 
 body {
-    color: var(--quaternary-color);
+    color: var(--primary-color);
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -35,22 +35,25 @@ header a {
 }
 
 header h1 {
-    margin: 0;
+    margin: 10px 0 0 0;
     width: 100%;
     font-size: 50px;
     color: var(--secondary-color);
 }
 
 header nav {
-    margin: 25px 0;
-    width: 100%;
+    margin: 10px 0;
+    width: 80%;
+    display: flex;
 }
 
 header nav ul {
-    margin: 10px;
+    margin: 10px 0;
+    width: 100%;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     list-style: none;
 }
 
@@ -68,5 +71,32 @@ header nav ul li a {
     height: 400px;
     margin: 0;
     padding: 10px;
-    border: 2px solid var(--quaternary-color);
+    border: 2px solid var(--primary-color);
+}
+
+#hero {
+    background-color: var(--quaternary-color);
+}
+#hero h2{
+    border: none;
+}
+
+#hero {
+    background-image: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+#hero div {
+    margin: 0 25px 20px 0;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#hero span {
+    color: var(--secondary-color);
 }
