--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     --secondary-color: #D82148;
     --tertiary-color: #6EBF8B;
     --quaternary-color: #dadbbd;
+    --heading-fonts: 50px;
 }
 
 * {
@@ -37,7 +38,7 @@ header a {
 header h1 {
     margin: 10px 0 0 0;
     width: 100%;
-    font-size: 50px;
+    font-size: var(--heading-fonts);
     color: var(--secondary-color);
 }
 
@@ -66,7 +67,7 @@ header nav ul li a {
      
 }*/
 
-#hero, #about-me, #resume, #projects, #contact-me {
+.hero, .about-me, .resume, .projects, .contact-me {
     width: 100%;
     height: 400px;
     margin: 0;
@@ -74,21 +75,21 @@ header nav ul li a {
     border: 2px solid var(--primary-color);
 }
 
-#hero {
+.hero {
     background-color: var(--quaternary-color);
 }
-#hero h2{
+.hero h2{
     border: none;
 }
 
-#hero {
+.hero {
     background-image: none;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
-#hero div {
+.hero div {
     margin: 0 25px 20px 0;
     border: none;
     display: flex;
@@ -97,6 +98,38 @@ header nav ul li a {
     align-items: center;
 }
 
-#hero span {
+.hero span {
     color: var(--secondary-color);
+}
+
+.about-me {
+    background-color: var(--quaternary-color);
+    color: var(--primary-color);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.about-me h2{
+    border-bottom: 1px solid var(--primary-color);
+    width: 75%;
+    font-size: 40px;
+    height: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-me-text {
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+.about-me p {
+    border: 1px solid red;
+    text-align: center;
+    font-size: 2.5vw;
 }
