--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ header nav ul li a {
 
 .hero, .about-me, .resume, .projects, .contact-me {
     width: 100%;
-    height: 400px;
+    height: 450px;
     margin: 0;
     padding: 10px;
     border: 2px solid var(--primary-color);
@@ -114,14 +114,16 @@ header nav ul li a {
     border-bottom: 1px solid var(--primary-color);
     width: 75%;
     font-size: 40px;
-    height: 25%;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .about-me-text {
-    height: 75%;
+    padding: 25px;
+    height: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -129,7 +131,52 @@ header nav ul li a {
 }
 
 .about-me p {
-    border: 1px solid red;
     text-align: center;
     font-size: 2.5vw;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.resume {
+    background-color: var(--quaternary-color);
+    color: var(--primary-color);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 300px;
+}
+
+.resume h2{
+    border-bottom: 1px solid var(--primary-color);
+    width: 75%;
+    font-size: 40px;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume-details {
+    width: 100%;
+    height: 80%;
+    margin-top: 10px;
+    
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.resume-half {
+    height: 100%;
+    width: 50%;
+    font-size: 2.5vw;
+    line-height: 175%;
+}
+
+.resume-half h3 {
+    margin-left: 58px;
+}
+.resume-half ul {
+    margin-left: 83px;
+    font-size: 80%;
 }
