--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,6 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
     top: 0;
     z-index: 999;
 }
@@ -67,7 +65,7 @@ header nav ul li a {
      
 }*/
 
-.hero, .about-me, .resume, .projects, .contact-me {
+.hero, .about-me, .resume, .contact-me {
     width: 100%;
     height: 450px;
     margin: 0;
@@ -77,16 +75,27 @@ header nav ul li a {
 
 .hero {
     background-color: var(--quaternary-color);
-}
-.hero h2{
-    border: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-image: none;
 }
 
-.hero {
-    background-image: none;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+.hero-image {
+    text-align: center;
+    height: 350px;
+    width: 350px;
+}
+
+.hero-image img {
+    border: 5px solid var(--primary-color);
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
+.hero h2{
+    border: none;
 }
 
 .hero div {
@@ -160,7 +169,6 @@ header nav ul li a {
     width: 100%;
     height: 80%;
     margin-top: 10px;
-    
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -179,4 +187,56 @@ header nav ul li a {
 .resume-half ul {
     margin-left: 83px;
     font-size: 80%;
+}
+
+.projects {
+    background-color: var(--quaternary-color);
+    color: var(--primary-color);
+    display: block;
+    text-align: center;
+
+}
+
+.projects h2{
+    border: 1px solid black;
+    border-bottom: 1px solid var(--primary-color);
+    width: 75%;
+    font-size: 40px;
+    height: 20%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-cards {
+    border: 1px solid black;
+    width: 100%;
+    height: 80%;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.main-card {
+    border: 1px solid black;
+    width: 100%;
+    height: 60%;
+}
+
+.small-card-container {
+    margin: 10px;
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.small-card-container img {
+    padding: 5px;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
