--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 body {
@@ -25,15 +25,11 @@ header {
     padding: 0;
     text-align: center;
     display: flex;
-    justify-content: center;
+    justify-content:center;
+
     flex-wrap: wrap;
     top: 0;
     z-index: 999;
-}
-
-header a {
-    text-decoration: none;
-    color: var(--secondary-color);
 }
 
 header h1 {
@@ -41,29 +37,53 @@ header h1 {
     width: 100%;
     font-size: var(--heading-fonts);
     color: var(--secondary-color);
+    height: 50%;
 }
 
 header nav {
-    margin: 10px 0;
-    width: 80%;
+    width: 100%;
+    height:50%;
     display: flex;
+    justify-content: center;
 }
 
 header nav ul {
-    margin: 10px 0;
-    width: 100%;
-    position: relative;
+    margin: 0 0 0 0;
+    width: 75%;
+    height: 50px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
+    align-items: center;
     
 }
 
+header nav ul li {
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+}
+
 header nav ul li a {
-    font-weight:bold;
+    text-decoration: none;
+    font-weight: bold;
     font-size: 3vw;
     color: var(--secondary-color);
+    background-color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+header nav ul li a:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 /* #content {
