--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 body {
@@ -26,7 +26,6 @@ header {
     text-align: center;
     display: flex;
     justify-content:center;
-
     flex-wrap: wrap;
     top: 0;
     z-index: 999;
@@ -142,6 +141,7 @@ header nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    height: 400px;
 }
 
 .about-me h2{
