--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@
     --tertiary-color: #357a4d;
     --quaternary-color: #dadbbd;
     --heading-fonts: 50px;
-    --content-section-border: 5px solid var(--primary-color);
-    --heading-border: 3px solid var(--tertiary-color);
+    --content-section-border: 4px solid var(--primary-color);
+    --heading-border: 2px solid var(--tertiary-color);
 }
 
 * {
@@ -54,7 +54,6 @@ header nav ul {
     justify-content: space-between;
     list-style: none;
     align-items: center;
-    
 }
 
 header nav ul li {
@@ -141,7 +140,7 @@ header nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 400px;
+    height: auto;
 }
 
 .about-me h2{
@@ -158,16 +157,16 @@ header nav ul li a:hover {
 .about-me-text {
     padding: 25px;
     height: 80%;
-    width: 100%;
+    max-width: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: stretch;
 }
 
 .about-me p {
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 25px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
@@ -178,7 +177,7 @@ header nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 300px;
+    height: auto;
 }
 
 .resume h2{
@@ -224,6 +223,7 @@ header nav ul li a:hover {
     text-align: center;
     flex-wrap: wrap;
     justify-content: center;
+    height: auto;
 }
 
 .projects h2 {
