--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,10 @@ header nav ul li a:hover {
     display: flex;
 }
 
+.main-card:hover {
+    opacity: 0.5;
+}
+
 .main-card img {
     width: 100%
 }
@@ -273,7 +277,10 @@ header nav ul li a:hover {
     max-width: 50%;
     height: auto; 
     border: 10px solid var(--tertiary-color);
-    
+}
+
+.small-card-container div:hover {
+    opacity: 0.5;
 }
 .small-card-container img {
     width: 100%;
