--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 body {
@@ -193,7 +193,7 @@ header nav ul li a:hover {
 }
 
 .resume-details {
-    width: 100%;
+    width: 75%;
     height: 80%;
     margin-top: 10px;
     display: flex;
@@ -204,16 +204,16 @@ header nav ul li a:hover {
 .resume-half {
     height: 100%;
     width: 50%;
-    font-size: 2.5vw;
-    line-height: 175%;
+    line-height: 1.5;
 }
 
 .resume-half h3 {
-    margin-left: 58px;
+    margin-left: 85px;
+    font-size:32px;
 }
 .resume-half ul {
-    margin-left: 83px;
-    font-size: 80%;
+    margin-left: 125px;
+    font-size: 25px;
 }
 
 .projects {
@@ -290,7 +290,7 @@ header nav ul li a:hover {
 .contact-me {
     border-bottom: var(--content-section-border);
     width: 100%;
-    height: 350px;
+    height: auto;
     margin: 0;
     padding: 10px;
     background-color: var(--quaternary-color);
