--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,11 +244,21 @@ header nav ul li a:hover {
 
 .main-card {
     margin: 12.5px;
-    border: 7px solid var(--tertiary-color);
+    border: 7px solid var(--primary-color);
     max-width: 75%;
     max-height: 35%;
     display: flex;
     justify-content: center;
+    position: relative;
+}
+.main-card p {
+    background-color: var(--primary-color);
+    color: var(--quaternary-color);
+    position: absolute;
+    left: 0;
+    top: 65%;
+    padding: 5%;
+    
 }
 .main-card:hover {
     opacity: 0.5;
@@ -264,16 +274,15 @@ header nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    
     align-items:stretch;
     gap: 10px;
     
 }
-
 .small-card-container div {
     width: 48%;
     height: 50;
-    border: 7px solid var(--tertiary-color);
+    border: 7px solid var(--primary-color);
+    position: relative;
 }
 
 .small-card-container div:hover {
@@ -282,6 +291,15 @@ header nav ul li a:hover {
 .small-card-container img {
     width: 100%;
     height: 100%;
+}
+
+.small-card-container div p {
+    background-color: var(--primary-color);
+    color: var(--quaternary-color);
+    position: absolute;
+    left: 0;
+    top: 65%;
+    padding: 5%;
 }
 
 /*Contact Me section*/
