--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ header nav ul li a:hover {
     background-color: var(--quaternary-color);
     border-bottom: var(--content-section-border);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-image: none;
 }
@@ -97,7 +97,7 @@ header nav ul li a:hover {
 .hero-image {
     text-align: center;
     margin: 25px;
-    width: 45%;
+    max-width: 45%;
     height: 100%;
 }
 
@@ -110,10 +110,10 @@ header nav ul li a:hover {
 }
 
 .hero-text {
-    width: 55%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+    max-width: 55%;
+    height: auto;
+    margin: 10px;
+    text-align: center;
     flex: 1;
 }
 .hero h2{
